force-app/RapidoACVmini/default/objects/Opportunity/fields/ACV__c.field-meta.xml
<CustomField>
    <fullName>ACV__c</fullName>
    <description>ACV = annual contract value</description>
    <formula>IF(YEAR(ACV_Renewal_Start_Date__c) = YEAR(TODAY()), Amount*(DATE(year(today()),12,31)  - ACV_Renewal_Start_Date__c)/365,
IF(YEAR(ACV_Renewal_Expiry_Date__c)= YEAR(TODAY()), Amount*(ACV_Renewal_Expiry_Date__c - DATE(year(today()),1,1)  )/365,
0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>ACV = valeur annuelle du contrat de l&apos;opp.
Attention : ce champ ne distingue pas entre les opps gagnées, perdues, ou en cours.

Pour connaître cette distinction, voir les champs &quot;_ACV gagné&quot;, &quot;_ACV possible&quot; et &quot;_ACV perdu&quot;.</inlineHelpText>
    <label>_ACV</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>