force-app/RapidoACVmini/default/objects/Opportunity/fields/ACV_any__c.field-meta.xml
<CustomField>
    <fullName>ACV_any__c</fullName>
    <formula>&quot;.&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>_tous</label>
    <type>Text</type>
</CustomField>