force-app/RapidoACVmini/default/objects/Opportunity/fields/ACV_expected_revenue__c.field-meta.xml
<CustomField>
    <fullName>ACV_expected_revenue__c</fullName>
    <formula>IF(YEAR(ACV_Renewal_Start_Date__c) = YEAR(TODAY()), IF(IsClosed, Amount, Amount*Probability)*(DATE(year(today()),12,31)  - ACV_Renewal_Start_Date__c)/365,
IF(YEAR(ACV_Renewal_Expiry_Date__c)= YEAR(TODAY()), IF(IsClosed, Amount, Amount*Probability)*(ACV_Renewal_Expiry_Date__c - DATE(year(today()),1,1)  )/365,
0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>_ACV (montant pondéré)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>