force-app/RapidoACVmini/default/objects/Opportunity/fields/ACV_forecast__c.field-meta.xml
<CustomField>
    <fullName>ACV_forecast__c</fullName>
    <description>ACV d&apos;opportunités en cours, pas encore gagnées (mais pas perdues)</description>
    <formula>IF(NOT(IsClosed), ACV__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>_ACV possible</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>