force-app/RapidoACVmini/default/objects/Opportunity/fields/ACV_forecast_expected_revenue__c.field-meta.xml
<CustomField>
    <fullName>ACV_forecast_expected_revenue__c</fullName>
    <formula>IF(!IsClosed, ACV_expected_revenue__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>_ACV possible (montant pondéré)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>