force-app/RapidoACVmini/default/objects/Opportunity/fields/ACV_lost__c.field-meta.xml
<CustomField>
    <fullName>ACV_lost__c</fullName>
    <description>ACV d&apos;opportunité perdue (valeur du churn)</description>
    <formula>IF(IsClosed &amp;&amp; NOT(IsWon), ACV__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>_ACV perdu</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>