force-app/RapidoACVmini/default/objects/Opportunity/fields/ACV_lost_Y_2__c.field-meta.xml
<CustomField>
    <fullName>ACV_lost_Y_2__c</fullName>
    <formula>IF(!IsWon, ACV_Y_2__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>_ACV perdu Y-2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>