force-app/RapidoACVmini/default/objects/Opportunity/fields/ACV_lost_Y_3__c.field-meta.xml
<CustomField>
    <fullName>ACV_lost_Y_3__c</fullName>
    <formula>IF(!IsWon, ACV_Y_3__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>_ACV perdu Y-3</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>