force-app/RapidoACVmini/default/objects/Opportunity/fields/ACV_Renewal_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>ACV_Renewal_Start_Date__c</fullName>
    <label>_ACV Renewal Start Date</label>
    <type>Date</type>
</CustomField>