force-app/RapidoACVmini/default/objects/Opportunity/fields/ACV_type__c.field-meta.xml
<CustomField>
    <fullName>ACV_type__c</fullName>
    <description>&quot;won&quot;, &quot;lost&quot;, &quot;forecast&quot;</description>
    <formula>IF(ACV_won__c&lt;&gt;0  || ACV_won_Y_1__c&lt;&gt;0  || ACV_won_Y_2__c&lt;&gt;0  || ACV_won_Y_3__c&lt;&gt;0,  &quot;won&quot;,
IF( ACV_forecast__c &lt;&gt;0, &quot;forecast&quot;,
IF(ACV_lost__c&lt;&gt;0 || ACV_lost_Y_1__c&lt;&gt;0 || ACV_lost_Y_2__c&lt;&gt;0 || ACV_lost_Y_3__c&lt;&gt;0, &quot;lost&quot;,
&quot;&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>_ACV type</label>
    <type>Text</type>
</CustomField>