force-app/RapidoACVmini/default/objects/Opportunity/fields/ACV_won__c.field-meta.xml
<CustomField>
    <fullName>ACV_won__c</fullName>
    <formula>IF(IsClosed &amp;&amp; IsWon, ACV__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>_ACV gagné</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>