force-app/RapidoACVmini/default/objects/Opportunity/fields/ACV_won_Y_1__c.field-meta.xml
<CustomField>
    <fullName>ACV_won_Y_1__c</fullName>
    <formula>IF(IsWon, ACV_Y_1__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>_ACV gagné Y-1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>