force-app/RapidoACVmini/default/objects/Opportunity/fields/ACV_Y_2__c.field-meta.xml
<CustomField>
    <fullName>ACV_Y_2__c</fullName>
    <formula>IF(YEAR(ACV_Renewal_Start_Date__c) = YEAR(TODAY()-365*2), Amount*(DATE(year(TODAY()-365*2),12,31) - ACV_Renewal_Start_Date__c    )/365,
IF(YEAR(ACV_Renewal_Expiry_Date__c)= YEAR(TODAY()-365*2), Amount*(ACV_Renewal_Expiry_Date__c      - DATE(year(TODAY()-365*2),1,1))/365,
0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>_ACV Y-2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>