force-app/RapidoACVmini/default/objects/Opportunity/fields/Revenue_by_cross_sell__c.field-meta.xml
<CustomField>
    <fullName>Revenue_by_cross_sell__c</fullName>
    <formula>IF(!(IsClosed &amp;&amp; !IsWon) &amp;&amp; ISPICKVAL(Type, &quot;Cross-sell&quot;),
Amount,
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>_Revenue by cross-sell</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>