force-app/RapidoACVmini/default/objects/Opportunity/fields/Revenue_by_expansion__c.field-meta.xml
<CustomField>
    <fullName>Revenue_by_expansion__c</fullName>
    <description>Includes revenue by cross-sell and up-sell.
Used to work out percentages of revenue by expansion.</description>
    <formula>IF(!(IsClosed &amp;&amp; !IsWon) &amp;&amp; (ISPICKVAL(Type, &quot;Up-sell&quot;) || ISPICKVAL(Type, &quot;Cross-sell&quot;)),
Amount,
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>_Revenue by expansion</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>