force-app/RapidoACVmini/default/objects/Opportunity/fields/Revenue_churn__c.field-meta.xml
<CustomField>
    <fullName>Revenue_churn__c</fullName>
    <formula>IF(IsClosed &amp;&amp; !IsWon &amp;&amp; ISPICKVAL(Type, &quot;Renewal&quot;),
Amount,
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>_Revenue churn</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>