force-app/RapidoACVmini/default/objects/Opportunity/fields/Revenue_is_New_or_Churn__c.field-meta.xml
<CustomField>
    <fullName>Revenue_is_New_or_Churn__c</fullName>
    <formula>if(ispickval(Type, &quot;New business&quot;) || ispickval(Type, &quot;Up-sell&quot;) || ispickval(Type, &quot;Cross-sell&quot;), &quot;Acquisition/Expansion&quot;,
if(Revenue_is_type__c=&quot;Renewal&quot;, &quot;Renewal&quot;,
if(Revenue_is_type__c=&quot;Forecast&quot; &amp;&amp;  ispickval(Type, &quot;Renewal&quot;), &quot;Renewal&quot;,
if(Revenue_is_type__c=&quot;Forecast&quot; &amp;&amp; !ispickval(Type, &quot;Renewal&quot;), &quot;Acquisition/Expansion&quot;,


Revenue_is_type__c
))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>_Revenue is New or Churn</label>
    <type>Text</type>
</CustomField>