force-app/RapidoACVmini/default/objects/Opportunity/fields/Revenue_is_type__c.field-meta.xml
<CustomField>
    <fullName>Revenue_is_type__c</fullName>
    <formula>if( !(IsClosed &amp;&amp; IsWon) &amp;&amp; Revenue_by_acquisition__c + Revenue_by_renewal__c + Revenue_by_up_sell__c + Revenue_by_cross_sell__c &lt;&gt;0, &quot;Forecast&quot;,

if( Revenue_by_acquisition__c &lt;&gt; 0, &quot;Acquisition&quot;,
if( Revenue_churn__c          &lt;&gt; 0, &quot;Churn&quot;,
if( Revenue_by_renewal__c     &lt;&gt; 0, &quot;Renewal&quot;,
if( Revenue_by_up_sell__c     &lt;&gt; 0, &quot;Expansion Up&quot;,
if( Revenue_by_cross_sell__c  &lt;&gt; 0, &quot;Expansion Cross&quot;,
&quot;&quot;))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>_Revenue is</label>
    <type>Text</type>
</CustomField>