force-app/RapidoACVmini/default/objects/Opportunity/fields/Revenue_total__c.field-meta.xml
<CustomField>
    <fullName>Revenue_total__c</fullName>
    <description>Includes Revenue Won and Lost (churn)</description>
    <formula>IF(!(IsClosed &amp;&amp; !IsWon),
 ExpectedRevenue ,
0)

+
Revenue_churn__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>_Revenue total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>